--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
